# whitewizard_vio

./: CMakeLists.txt  README.md
app/: test_euroc.cpp
config/: cam_pose.txt  euroc_config.yaml  imu_int_pose_noise.txt  imu_pose_noise.txt
include/: System.h  estimator.h  feature_manager.h  feature_track.h  feature_track_parameters.h  integration_base.h  parameter.h  time_check.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  imu_dataset.h  loss_function.h  solve.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
include/camera_models/calib/: CameraCalibration.h
include/camera_models/camera/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
include/camera_models/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h
include/camera_models/gpl/: EigenQuaternionParameterization.h  EigenUtils.h  gpl.h
include/camera_models/sparse_graph/: Transform.h
include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_track.cpp  feature_track_parameters.cpp  parameter.cpp  utility.cpp
src/backend/: edge.cpp  edge_imu.cpp  edge_prior.cpp  edge_reprojection.cpp  imu_dataset.cpp  loss_function.cpp  solve.cpp  vertex.cpp  vertex_pose.cpp
src/camera_models/: intrinsic_calib.cc
src/camera_models/calib/: CameraCalibration.cc
src/camera_models/camera/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/camera_models/chessboard/: Chessboard.cc
src/camera_models/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/camera_models/sparse_graph/: Transform.cc
